objects/ASI_CRM_Image_Outlet_Request_SubBrand__c.object
<CustomObject>
    <description>Image Outlet Request Line Items (OFF)
ASI_CRM_Image_Outlet_Request_SubBrand__c</description>
    <fields>
        <fullName>ASI_CRM_IOM__c</fullName>
        <label>Image Outlet Request</label>
        <referenceTo>ASI_CRM_Image_Outlet_Request__c</referenceTo>
        <relationshipName>Image_Outlet_Request_MAT</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Image_Production__c</fullName>
        <label>Image Production</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN FOC Sub-brand</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.ASI_MFM_Active_for_CRM__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.ASI_MFM_Brand__r.ASI_CRM_CN_Competitor__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Image Outlet Request Sub Brand</relationshipLabel>
        <relationshipName>Image_Outlet_Request_MAT</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Image Outlet Request Sub Brand</label>
    <nameField>
        <label>IOM Sub Brand</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Image Outlet Request Sub Brand</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>